# cudasimulateworlds

./: .gitignore  CMakeLists.txt  clean.sh  makefile
docs/: README.md
src/: constants.h  include.h  main.cu
src/include/: utils.cpp  utils.h
src/include/classes/: ParticleData.cpp  ParticleData.h  Shapes.cpp  Shapes.h
test/: genplots.py  genplots2.py  genplots3.py  ncu.sh  plot.ipynb  run.sh  runwindows.bat
test/results/old/: out_1048576.txt  out_131072.txt  out_4194304.txt  out_524288.txt  out_65536.txt  out_8388608.txt
test/results/simdata/: world_0_20_04.csv  world_0_29_50.csv
test/results/stdout/: out_1.txt  out_1024.txt  out_1048576.txt  out_128.txt  out_131072.txt  out_16.txt  out_16384.txt  out_2.txt  out_2048.txt  out_2097152.txt  out_256.txt  out_262144.txt  out_32.txt  out_32768.txt  out_4.txt  out_4096.txt  out_4194304.txt  out_512.txt  out_524288.txt  out_64.txt  out_65536.txt  out_8.txt  out_8192.txt  out_8388608.txt
